feat(auto_balancer): use uniformed interface for reconfiguration
Signed-off-by: Shichao Nie <niesc@automq.com>